force-app/main/default/objects/JMS_Campaign_Target_Landing__c/JMS_Campaign_Target_Landing__c.object-meta.xml
<CustomObject>
    <label>Campaign Target Landing</label>
    <nameField>
        <displayFormat>CML-{00000000}</displayFormat>
        <label>Campaign Member Landing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Targets Landing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>