force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>JMS_Annual_Volume__c</fullName>
    <description>Annual Volume</description>
    <label>Annual Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>