force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Call_Made_By__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Made_By__c</fullName>
    <label>Call Made By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>