force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operator_City__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_City__c</fullName>
    <description>Operator City</description>
    <label>Operator City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>