force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operator_Contact_Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Contact_Mobile_Phone_Number__c</fullName>
    <label>Operator Contact Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>