force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operator_Contact_Phone_Number_Ext__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Contact_Phone_Number_Ext__c</fullName>
    <label>Operator Contact Phone Number Ext.</label>
    <type>Phone</type>
</CustomField>