force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Name__c</fullName>
    <description>Operator Name</description>
    <label>Operator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>