force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operator_Phone__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Phone__c</fullName>
    <label>Operator Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>