force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operator_Zip__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Zip__c</fullName>
    <description>Operator Zip</description>
    <label>Operator Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>