force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Operators_State__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operators_State__c</fullName>
    <description>Operators State</description>
    <label>Operators State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>