force-app/main/default/objects/JMS_Campaign_Target_Landing__c/fields/JMS_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>