force-app/main/default/objects/JMS_Campaign_Target_Landing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Call_Made_By__c</columns>
    <columns>JMS_Campaign_Name__c</columns>
    <columns>JMS_Operator_Name__c</columns>
    <columns>JMS_FireFlyId__c</columns>
    <columns>JMS_Smucker_SKU__c</columns>
    <columns>JMS_Annual_Volume__c</columns>
    <columns>JMS_Operator_Contact_First_Name__c</columns>
    <columns>JMS_Operator_Contact_Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>